--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-cieres-com",
   "version": "0.1.0",
+  "homepage": "http://cieresltda.github.io/cieres.com",
   "private": true,
   "dependencies": {
     "@types/node": "^15.14.9",
@@ -23,6 +24,8 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
