--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Landy",
-  "name": "Landy - React Template",
+  "short_name": "Cieres",
+  "name": "Cieres Services and Technology",
   "icons": [
     {
       "src": "img/icons/logo192.png",
